# TUI

./: CMakeLists.txt  main.cpp
examples/button/: main.cpp
examples/common/: allviews.hpp  conbufserializeinfo.cpp  conbufserializeinfo.hpp
examples/common/widgets/: button.hpp  textarea.cpp  textarea.hpp
examples/editable_view/: editable.cpp  editable.hpp  layout.hpp  serializable.hpp
examples/udpioapp/: appwidget.hpp  client.cpp  client.hpp  common.hpp  consolesink.hpp  server.cpp  server.hpp  udpioapp.cpp  udpioapp.hpp
include/: asciiescape.hpp  asciistyles.hpp  buttonwidget.hpp  charunit.hpp  consolearea.hpp  consoleevent.hpp  consoleevent_t.hpp  consolewidget.hpp  consolezbuffer.hpp  coprintf.hpp  escapeparsehelper.hpp  eventroot.hpp  kbevent.hpp  properties.hpp  termcolor.hpp  textmap.hpp  utils.hpp  widgetregistry.cpp  widgetregistry.hpp  xtermeventloop.hpp
src/: buttonwidget.cpp  charunit.cpp  consoleevent.cpp  consoleevent_rules.cpp  consolewidget.cpp  consolezbuffer.cpp  coprintf.cpp  escapeparsehelper.cpp  eventroot.cpp  termcolor.cpp  textmap.cpp  xtermeventloop.cpp
